Bug 1188238: [MSE] P1. Don't use Interval::Intersect to find the first frame of an interval. r=gerald

With H264, often the first frame of a media segment has no duration ; as such the time interval it represents is empty and will never intersect with anything.